# voter-stake-registry

./: Anchor.toml  Cargo.toml  README.md  package.json
.github/workflows/: ci-lint-test.yml
cli/: Cargo.toml
lifecycle-test/: Cargo.toml  README.md
lifecycle-test/keypairs/: auth-keypair.json  program-keypair.json  vsr-program-keypair.json
lifecycle-test/scripts/: airdrop_sol_localnet.sh  deploy_program_localnet.sh  update_and_build.sh
lifecycle-test/src/: addin_lifecycle.rs  main.rs  program_deploy.rs  vsr_lifecycle.rs
lifecycle-test/src/program_test/: addin.rs  cookies.rs  governance.rs  mod.rs  solana.rs  utils.rs  vsr.rs
programs/voter-stake-registry/: Cargo.toml
programs/voter-stake-registry/src/: governance.rs  lib.rs
programs/voter-stake-registry/src/instructions/: close_voter.rs  configure_voting_mint.rs  create_registrar.rs  create_voter.rs  grant.rs  update_max_vote_weight.rs
programs/voter-stake-registry/src/state/: deposit_entry.rs  lockup.rs  registrar.rs  voter.rs
programs/voter-stake-registry/tests/: test_grants.rs  test_voting.rs
programs/voter-stake-registry/tests/program_test/: governance.rs  mod.rs
src/: client.ts  voter_stake_registry.json
