[package]
name = "vsr-lifecycle"
version = "0.2.4"
edition = "2021"

[dependencies]
voter-stake-registry = { path = "../programs/voter-stake-registry", features = ["no-entrypoint"] }

anchor-lang = "0.30.1"
anchor-client = "0.30.1"
anchor-spl = { version = "0.30.1" }
solana-program = "1.18.18"

serde = "^1.0"
serde_json = "^1.0"
log = "0.4.14"
base64 = "0.13.0"
tokio = "1.35.1"
bytemuck = {version = "1.9.1", features = ["derive", "min_const_generics"]}
spl-governance = { version = "4.0", features = ["no-entrypoint"] }
spl-governance-addin-api = "0.1.4"
spl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "^3.0.4", features = ["no-entrypoint"] }
