[package]
name = "voter-stake-registry"
version = "0.2.4"
description = "a voter weight plugin for spl-governance"
license = "GPL-3.0-or-later"
homepage = "https://github.com/blockworks-foundation/voter-stake-registry"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "voter_stake_registry"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-sbf = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
bytemuck = {version = "1.9.1", features = ["derive", "min_const_generics"]}

# WARNING: Be careful about upgrading the spl-governance dependency!
#          Recently the discriminator for new VoterWeightRecord accounts has changed, and upgrading
#          this dependency here without also upgrading the spl-governance program instance beforehand
#          would lead to VWR accounts that are unusable until the spl-governance program is upgraded.
spl-governance = { version = "4.0", features = ["no-entrypoint"] }
spl-governance-addin-api = "0.1.4"

solana-program = "1.18.18"
static_assertions = "1.1"

[dev-dependencies]
solana-sdk = "1.18.18"
solana-program-test = "1.18.18"
solana-logger = "1.18.18"
spl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "^3.0.4", features = ["no-entrypoint"] }
bytemuck = "^1.9.1"
serde = "^1.0"
bincode = "^1.3.1"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"
